# tamagotchi

./: .gitignore  .npmignore  COMPETITIVE_ANALYSIS.md  CONTRIBUTING.md  GTM.md  LICENSE  MARKETING.md  PLAN.md  README.md  SHOW_HN_DRAFT.md  install.sh  package.json  pyproject.toml
.github/workflows/: ci.yml  publish-npm.yml  publish.yml
homebrew/: README.md  tamagotchi.rb
integrations/claude_code_skill/: setup-tamagotchi-hooks.md
integrations/starship/: README.md  tamagotchi.toml
integrations/tmux/: README.md  tamagotchi.tmux
integrations/tmux/scripts/: status.sh
plugins/aider/: __init__.py  plugin.py
plugins/claude_code/: __init__.py  plugin.py
plugins/cursor/: plugin.py
plugins/goose/: __init__.py  plugin.py
src/tamagotchi/: __init__.py  __main__.py
src/tamagotchi/cli/: install.py  share.py  share_gist.py
src/tamagotchi/core/: __init__.py  evolution.py  minigames.py  persistence.py  pet.py
src/tamagotchi/plugins/: __init__.py  base.py
src/tamagotchi/sprites/: __init__.py  ascii.py
src/tamagotchi/ui/: __init__.py  app.py
src/tamagotchi/ui/screens/: graveyard.py  help.py  main.py  minigame.py  new_pet.py
src/tamagotchi/ui/widgets/: __init__.py  action_menu.py  pet_display.py  stat_bars.py
tests/: test_core.py
